feat(backend): Phase D — Cognito JWT + per-loan access guard
Every /api/** request now requires a valid Cognito JWT. Per-loan ownership is
enforced at the document endpoints via @PreAuthorize + LoanAccessGuard.

Changes:
- Add spring-boot-starter-oauth2-resource-server.
- Flyway V5: users table (cognito_sub, email, display_name, primary_role, audit
  columns) and cognito_sub column on borrowers.
- User entity + UserRepository.
- Borrower gains cognito_sub for backfill on borrower sign-in.
- security/CognitoJwtConverter: maps cognito:groups → ROLE_* authorities,
  uses email as principal name (falls back to sub).
- security/CurrentUserService: get-or-create local user from JWT, backfills
  borrowers.cognito_sub when a borrower's email matches.
- security/LoanAccessGuard (@loanAccessGuard): allow internal staff (Admin,
  Manager, LO, Processor) blanket access; allow Borrower role only when their
  Cognito email matches a borrower-on-loan; deny otherwise. Phase-D scope —
  assigned-LO and agent-on-loan checks are deferred until those join tables exist.
- SecurityConfig rewrite: stateless sessions, JWT validation via Cognito issuer
  URI, OPTIONS / health / h2-console open, everything else authenticated.
  CORS tightened (configured Authorization + Content-Type + the methods we use).
- DocumentController class-level @PreAuthorize("@loanAccessGuard.canAccess(#loanId)").

Configuration:
- spring.security.oauth2.resourceserver.jwt.issuer-uri =
    https://cognito-idp.{region}.amazonaws.com/{userPoolId}
  Defaults to us-west-1_S6iE2uego per CLAUDE.md; override via env vars
  COGNITO_REGION / COGNITO_USER_POOL_ID.

Operational note:
- After this commit, the backend rejects unauthenticated /api requests. To
  smoke-test before the frontend is wired, supply a real Cognito id_token in
  the Authorization header (Bearer …). The frontend OIDC integration is the
  next commit.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>